# custom_reports

./: .gitignore  LICENSE  MANIFEST.in  README.md  hooks.py  modules.txt  pyproject.toml  requirements.txt  setup.py
custom_reports/: hooks.py
custom_reports/custom_reports/: custom_reports.json
custom_reports/custom_reports/desktop_icon/: custom_reports.json
custom_reports/report/: base_report.py
custom_reports/report/ap-aging/: ap-aging.json  ap-aging.py
custom_reports/report/ap_aging/: ap_aging.json  ap_aging.py
custom_reports/report/ar-aging/: ar-aging.json  ar-aging.py
custom_reports/report/ar_aging/: ar_aging.json  ar_aging.py
custom_reports/report/bank-statement/: bank-statement.json  bank-statement.py
custom_reports/report/bank_statement/: bank_statement.json  bank_statement.py
custom_reports/report/brand-sales-detail/: brand-sales-detail.json  brand-sales-detail.py
custom_reports/report/brand_sales_detail/: brand_sales_detail.json  brand_sales_detail.py
custom_reports/report/cash-report/: cash-report.json  cash-report.py
custom_reports/report/cash_report/: cash_report.json  cash_report.py
custom_reports/report/customer-profitability/: customer-profitability.json  customer-profitability.py
custom_reports/report/customer-statement/: customer-statement.json  customer-statement.py
custom_reports/report/customer_profitability/: customer_profitability.json  customer_profitability.py
custom_reports/report/customer_statement/: customer_statement.json  customer_statement.py
public/css/: modern.theme.css
public/js/: modern.theme.js
(+71 files in other folders)
